--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>title</title>
+    <title>Step</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="index.css">
+
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="index.js"></script>
   </head>
   <body>
+    <h1>Step</h1>
+
+    <p>Get a more precise understanding of code execution.</p>
+
+    <p>Click on the parts of the code in the order they will execute.</p>
 
     <span class="line">
-      <span>for</span> (<span class="ins i-0">var i</span> <span class="ins i-2">=</span> <span class="ins i-1">0</span>; <span class="ins i-3">i</span> <span class="ins i-5">&lt;</span> <span class="ins i-4">3</span>; <span class="ins i-6">i</span><span class="ins i-7">++</span>) {
+      <span>for</span> (<span class="ins i-0">var i</span> <span class="ins i-2">=</span> <span class="ins i-1">0</span>; <span class="ins i-3">i</span> <span class="ins i-5">&lt;</span> <span class="ins i-4">1</span>; <span class="ins i-6">i</span><span class="ins i-7">++</span>) {
     </span>
 
     <span class="line"><span class="i">&nbsp;&nbsp;</span><span class="ins i-8">console</span>.<span class="ins i-9">log</span><span class="ins i-11">(</span><span class="ins i-10">i</span><span class="ins i-11">)</span>;</span>
 
     <span class="line">}</span>
 
-    <div id="complete">Done!</div>
+    <p id="complete">Done!</p>
   </body>
 </html>
