Add instruction tooltips

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <p>Click on the parts of the code in the order they will execute.</p>
 
     <span class="line">
-      <span>for</span> (<span class="ins i-0">var i</span> <span class="ins i-2">=</span> <span class="ins i-1">0</span>; <span class="ins i-3">i</span> <span class="ins i-5">&lt;</span> <span class="ins i-4">1</span>; <span class="ins i-6">i</span><span class="ins i-7">++</span>) {
+      <span>for</span> (<span class="ins i-0">var i<span class="tooltiptext">instantiate variable</span></span> <span class="ins i-2">=<span class="tooltiptext">assign</span></span> <span class="ins i-1">0<span class="tooltiptext">create literal value</span></span>; <span class="ins i-3">i<span class="tooltiptext">look up variable</span></span> <span class="ins i-5">&lt;<span class="tooltiptext">test less than</span></span> <span class="ins i-4">1<span class="tooltiptext">create literal value</span></span>; <span class="ins i-6">i<span class="tooltiptext">look up variable</span></span><span class="ins i-7">++<span class="tooltiptext">increment</span></span>) {
     </span>
 
-    <span class="line"><span class="i">&nbsp;&nbsp;</span><span class="ins i-8">console</span>.<span class="ins i-9">log</span><span class="ins i-11">(</span><span class="ins i-10">i</span><span class="ins i-11">)</span>;</span>
+    <span class="line"><span class="i">&nbsp;&nbsp;</span><span class="ins i-8">console<span class="tooltiptext">look up variable</span></span>.<span class="ins i-9">log<span class="tooltiptext">look up attribute</span></span><span class="ins i-11">(<span class="tooltiptext">invoke function</span></span><span class="ins i-10">i<span class="tooltiptext">look up variable</span></span><span class="ins i-11">)<span class="tooltiptext">invoke function</span></span>;</span>
 
     <span class="line">}</span>
 
